# rsxml2json

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: config.rs  convert.rs  lib.rs
test_data/: cds.json  cds.xml  numerical.json  xsd.json
tests/: convert.rs
tests/data/: def_namespace.json  numerical.xml
