[package]
name = "rsxml2json"
version = "0.1.0"
authors = ["pasiyu <pasiyu0814@gmail.com>"]
description = "A Rust library for converting XML to JSON format"
repository = "https://github.com/szy1231/rsxml2json"
keywords = ["json", "xml", "xml2json", "xml_to_json", "xml_to_string"]
license = "MIT"


[dependencies]
roxmltree = "0.20.0"
serde_json = "1.0.117"
anyhow = "1.0"
